# machine_tools_gui_kivi

./: .gitignore  README.md  pyproject.toml
machine_tools_gui_kivi/: 01  __main__.py
machine_tools_gui_kivi/app/: app.py
machine_tools_gui_kivi/app/components/: database_editor_content.py  dropdown_list.py  labeled_input.py  labeled_spinner.py  search_template.py  searchbar.py  template_window.py
machine_tools_gui_kivi/app/components/database_editor/: __init__.py  content.py  left_column.py  right_column.py
machine_tools_gui_kivi/app/windows/: __init__.py  database_editor_window.py
machine_tools_gui_kivi/src/: descriptions.py  machine_finder.py
