[tool.poetry]
name = "machine-tools-gui-kivi"
version = "0.0.01"
description = "Пакет для работы с базой данных станков с графической оболочкой"
authors = ["Andrey Nikolaevich Korenyuk <korenyuk.a.n@mail.ru>"]
readme = "README.md"
packages = [{include = "machine_tools"}]


[tool.poetry.dependencies]
python = "^3.9"
kivy = "2.3.1"
kivymd = "1.2.0"
black = "^25.1.0"
isort = "^6.0.1"
machine-tools = {git = "https://github.com/sad-engineer/machine_tools.git", rev = "postgresql"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
