[tool.poetry]
name = "machine-tools-gui-kivi"
version = "0.0.05"
description = "Пакет для работы с базой данных станков с графической оболочкой"
authors = ["Andrey Nikolaevich Korenyuk <korenyuk.a.n@mail.ru>"]
readme = "README.md"
packages = [{include = "machine_tools"}]

[tool.poetry.dependencies]
python = "^3.9"
kivy = "2.3.1"
kivymd = "1.2.0"
machine-tools = {git = "https://github.com/sad-engineer/machine_tools.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
skip-string-normalization = true
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
